Import of KUERBIS/Term-TablePrint-0.005 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.005
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.005.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,33 +1,35 @@
 ---
-abstract: unknown
+abstract: 'Print a table to the terminal.'
 author:
   - 'Matthaeus Kiem <cuer2s@gmail.com>'
 build_requires:
-  Test::More: 0
+  Test::More: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.88, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.88, CPAN::Meta::Converter version 2.140640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Term-TablePrint
 no_index:
   directory:
     - t
     - inc
 requires:
-  Carp: 0
-  Exporter: 0
-  List::Util: 0
-  Scalar::Util: 0
-  Term::Choose: 1.105
-  Term::Choose::Util: 0.003
-  Term::ProgressBar: 0
-  Text::LineFold: 0
-  Unicode::GCString: 0
-  perl: 5.010001
-  strict: 0
-  warnings: 0
-version: 0.004
+  Carp: '0'
+  Exporter: '0'
+  List::Util: '0'
+  Scalar::Util: '0'
+  Term::Choose: '1.105'
+  Term::Choose::Util: '0.003'
+  Term::ProgressBar: '0'
+  Text::LineFold: '0'
+  Unicode::GCString: '0'
+  perl: '5.010001'
+  strict: '0'
+  warnings: '0'
+resources:
+  repository: https://github.com/kuerbis/Term-TablePrint.git
+version: '0.005'
